[package]
name = "todosage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.11"
paste = "1.0.14"
rand = "0.8.5"
regex = "1.9.1"
unicode-width = "0.1.10"
walkdir = "2.3.3"

[dev-dependencies]
indoc = "2.0.3"
pretty_assertions = "1.4.0"
proptest = "1.2.0"
